--- a/json2obj_console_test/json2obj_console_test.csproj
+++ b/json2obj_console_test/json2obj_console_test.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\json2obj_lib\json2obj_lib.csproj" />
+  </ItemGroup>
+
 </Project>
