--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-.*
-!/.gitignore
 json2obj_lib/bin/*
 json2obj_lib/obj/*
 json2obj_lib/debug/*
@@ -7,3 +5,4 @@ json2obj_console_test/bin/*
 json2obj_console_test/obj/*
 json2obj_console_test/debug/*
 json2obj_console_test/TestJSon/*
+.vs/json2obj_lib
